- Added overloaded implementation of Serializer::write_blob function.
- fmt::config now delegates db parameter conversion to caller code.
- Fixed Path::is_reg() method implementation for POSIX-based systems.
- Fixed bug in the resource::Compressor and resource::Decompressor classes which could cause
  file corruption at decompression stage.

=== 0.5.10 ===
* Added support of boolean parameters by the configuration parser.
* Added resource::PrefixLoader resource loader implementation.
* Added supplementary methods to the configuration parameters.
* Refactored the lsp::Color class: less inline code, more flexible methods.
* Fixed bug in fmt::obj::PushParser class behaviour.

=== 0.5.9 ===
* Several fixes for resource compressor.
* Removed fdatasync() call for io::NativeFile::flush method.
* Added system::get_current_dir() function.
* Added support of IOutStream::writeb() function.
* Added system::follow_url() functions to follow the specified URL.
* Fixed IDictionary::lookup() behaviour related to dictionaries.
* Added boolean parameter output support to the config::Serializer class.

=== 0.5.8 ===
* Added support of DOM parsing and serializing for JSON files.
* Added io::File::copy methods for copying files.
* Added io::Path::mkparent methods for creating parent directories.
* Added io::File::mkparent methods for creating parent directories.
* Added io::Path::get_first, io::Path::remove_first, io::Path::pop_first, io::Path::pop_last methods.
* Added io::OutBitStream class for manipulating output bit streams.
* Added io::InBitStream class for manipulating input bit streams.
* Added io::Path::clone, io::Path::compare_to and io::Path::hash methods for collection purposes.
* Added argument check for NULL for lspc::File class methods.
* Fixed character set encoding bugs for several systems that have limited libiconv.
* Added clear() and reduce() methods for io::OutMemoryStream.
* Implemented builtin resource compressor.
* Implemented builtin resource decompressor.
